force-app/main/default/objects/msf_Conversation__c/msf_Conversation__c.object-meta.xml
<CustomObject>
    <label>Conversación</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Nombre de Conversación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>