force-app/main/default/objects/msf_Conversation__c/fields/msf_DayWorked__c.field-meta.xml
<CustomField>
    <fullName>msf_DayWorked__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Día de trabajo</label>
    <type>Date</type>
</CustomField>