force-app/main/default/objects/msf_Conversation__c/fields/msf_EsRunningUser__c.field-meta.xml
<CustomField>
    <fullName>msf_EsRunningUser__c</fullName>
    <description>Campo que calcula si el campo &apos;Captador&apos; está asignado al usuario que está ejecutando la sesión</description>
    <formula>IF(msf_IdCanvasser__c = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Running User</label>
    <type>Checkbox</type>
</CustomField>