force-app/main/default/objects/msf_Conversation__c/fields/msf_IdCanvasser__c.field-meta.xml
<CustomField>
    <fullName>msf_IdCanvasser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canvasser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Conversaciones</relationshipName>
    <type>Lookup</type>
</CustomField>