force-app/main/default/objects/msf_Conversation__c/fields/msf_NumConversation__c.field-meta.xml
<CustomField>
    <fullName>msf_NumConversation__c</fullName>
    <label>Número de conversaciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>