force-app/main/default/objects/msf_Conversation__c/listViews/MSF_Conversaciones_Por_Captador.listView-meta.xml
<ListView>
    <fullName>MSF_Conversaciones_Por_Captador</fullName>
    <columns>NAME</columns>
    <columns>msf_IdCanvasser__c</columns>
    <columns>msf_DayWorked__c</columns>
    <columns>msf_NumConversation__c</columns>
    <filterScope>Everything</filterScope>
    <label>Conversaciones Por Captador</label>
</ListView>